--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,93 +1,11 @@
-:root {
-    --primaryColor: #0a1128;
-    --whiteColor: #fff;
-    --gap: 3rem;
-    --light-gray-color: #EEEEEE;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
-    color: var(--primaryColor);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Montserrat', sans-serif;
-}
-
-h1 {
-    font-size: 6rem;
-    text-transform: uppercase;
-}
-
-h2 {
-    font-size: 5.5rem;
-}
-
-h3 {
-    font-size: 5rem;
-}
-
-h4 {
-    font-size: 4.5rem;
-}
-
-h5 {
-    font-size: 4rem;
-}
-
-h6 {
-    font-size: 3.5rem;
-}
-
-a {
-    text-decoration: none;
-}
-
-.mainBg {
-    background-image: url(/assets/img/main-bg.svg);
-    background-size: cover;
-    background-position: center center;
-    color: var(--whiteColor);
-}
-
-.whiteBg {
-    background-color: var(--whiteColor);
-    color: var(--primaryColor);
-}
-
-.mainContent {
-    max-width: 1200px;
-    margin: auto;
-    padding: var(--gap);
-}
-
-.section {
-    min-height: 100vh;
-}
-
 .menu {
-    background-color: var(--whiteColor);
+    background-color: var(--primaryColor);
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    border-bottom: 1px solid var(--light-gray-color);
+    border-bottom: 2px solid black;
 }
 
 .menuContent {
@@ -100,11 +18,11 @@ a {
 
 .menu h1 {
     font-size: 2.3rem;
-    color: var(--primaryColor);
+    color: var(--whiteColor);
 }
 
 .menu h1 a {
-    color: inherit;
+    color: var(--whiteColor);
 }
 
 .menu ul {
@@ -117,5 +35,22 @@ a {
     padding: 2rem;
     font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
-    color: var(--primaryColor);
+    color: var(--whiteColor);
+    position: relative;
+}
+
+.menu ul li a::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    background-color: darkred;
+    transition: all 285ms ease-in-out;
+}
+
+.menu ul li a:hover::after {
+    width: 50%;
+    left: 25%;
 }
