--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -6,8 +6,18 @@
 }
 
 .whiteBg {
+    background-image: url(/assets/img/white-bg.svg);
+    background-size: cover;
+    background-position: center center;
     background-color: var(--whiteColor);
     color: var(--primaryColor);
+}
+
+.blueBg {
+    background-image: url(/assets/img/blue-bg.svg);
+    background-size: cover;
+    background-position: center center;
+    color: var(--whiteColor);
 }
 
 .mainContent {
