--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -28,7 +28,9 @@ h1 {
 }
 
 h2 {
-    font-size: 2rem;
+    text-transform: uppercase;
+    font-size: 2.3rem;
+    margin-bottom: 1.2rem;
 }
 
 h3 {
@@ -53,4 +55,5 @@ a {
 
 p {
     font-size: 1.75rem;
+    line-height: 1.5;
 }
