--- a/assets/css/contactMe.css
+++ b/assets/css/contactMe.css
@@ -37,7 +37,52 @@
 }
 
 .contactForm {
-    max-width: 100%;
-    height: auto;
     grid-column: span 2;
+}
+
+.contactForm .formGrid {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.formGrid legend {
+    font-style: italic;
+    font-size: 1.6rem;
+    margin-bottom: 2.5rem;
+}
+
+.formGroup {
+    flex: 1 1 320px;
+}
+
+.formGroup label {
+    display: block;
+}
+
+.formGroup input,
+.formGroup textarea {
+    border: none;
+    background-color: var(--primaryColor);
+    color: var(--whiteColor);
+    padding: 1.5rem 2rem;
+    width: 100%;
+}
+
+.formGroup button {
+    border: 5px solid var(--light-gray-color);
+    background: none;
+    color: var(--light-gray-color);
+    padding: 1.5rem 2rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.formGroup button:hover {
+    border: 5px solid var(--primaryColor);
+    background: var(--light-gray-color);
+    color: var(--primaryColor);
 }
