--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -25,7 +25,7 @@
 }
 
 .gridProjects img {
-    max-width: 90%;
+    width: 90%;
     height: 90%;
     overflow: auto;
     transition: all 300ms ease-in-out;
