--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -105,3 +105,12 @@
         transform: scale(1.1);
     }
 }
+
+@media (max-width: 1280px) {
+    .workContent {
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+}
