Tornando menu responsivo

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -14,8 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0;
 }
 
 .menu h1 {
@@ -53,4 +52,45 @@
 
 .menuSpacing {
     height: 59px;
+}
+
+.menu-icon {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: var(--whiteColor);
+    cursor: pointer;
+    padding: 15px;
+}
+
+/* Responsiveness */
+@media (max-width: 768px) {
+    .menu ul {
+        flex-direction: column;
+        display: none;
+        width: 100%;
+        background-color: var(--primaryColor);
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+
+    .menu ul.show {
+        display: flex;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .menu ul li {
+        width: 100%;
+        text-align: center;
+    }
+
+    .menu ul li a {
+        padding: 1rem;
+        font-size: 1.2rem;
+    }
 }
