--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr 1fr;
     gap: var(--gap);
     min-height: 100vh;
+    padding-top: 50px;
 }
 
 .workText {
@@ -112,5 +113,6 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        padding-top: 0px;
     }
 }
