--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -64,6 +64,15 @@
     padding: 15px;
 }
 
+.menu-language {
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: var(--whiteColor);
+    cursor: pointer;
+    padding: 15px;
+}
+
 /* Responsiveness */
 @media (max-width: 768px) {
     .menu ul {
