--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -63,6 +63,10 @@
     transform: translateY(-3px);
 }
 
+.linkcurriculo {
+    display: flex;
+}
+
 @keyframes slideIn {
     from {
         transform: translateX(-100%);
